2004-11-01  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c: Documentation updates.

	Handle conflicts between options in different groups. (#156808)
	
	* glib/goption.c (g_option_context_parse): When a long option does not
	match exactly, try to parse it as --group-option.
	(g_option_context_add_group): Warn if a group name conflict occurs.

	* glib/goption.c (print_help): Print out the effective options, ie 
	don't print shadowed short options, and for long options print
	--group-option instead of --option if appropriate.

2004-10-31  Matthias Clasen  <mclasen@redhat.com>

	* glib/gwin32.c: Add bits of markup to g_win32_get_windows_version()
	docs.

2004-10-31  Tor Lillqvist  <tml@iki.fi>

	* glib/gwin32.c: Document g_win32_get_windows_version().

	* glib/gstdio.[ch]: Add g_lstat().

2004-10-29  Matthias Clasen  <mclasen@redhat.com>

	* glib/goption.c: Doc additions.

	* glib/goption.c (parse_arg): Convert filenames to UTF-8 on
	Windows.

2004-10-29  Hans Breuer  <hans@breuer.org>

	* glibconfig.h */makefile.msc.in : updated [and finally fixed my
	script to produce ready to go de-in(ed) files, w/o autotools]

	* */*.rc.in : updated copyrights to 2004

	* glib/gutils.c : some CSIDL_* defines lacking from older SDK;
	use the same fallback mecahnism as on *NIX where ever applicable

2004-10-29  Matthias Clasen  <mclasen@redhat.com>

	* tests/option-test.c: Add tests for the handling of
	non-option arguments, "--" and G_OPTION_REMAINING.

	* glib/goption.[hc]: #define G_OPTION_REMAINING, which is
	a special long option name, which can be used for an option
	in the main group which collects the non-option arguments.
	It must be of type G_OPTION_ARG_STRING_ARRAY or 
	G_OPTION_ARG_FILENAME_ARRAY. If the main group doesn't contain
	an option whose name is G_OPTION_REMAINING, the non-option
	arguments are left behind in argv as before.

	* glib/goption.c: Add documentation.

2004-10-28  Matthias Clasen  <mclasen@redhat.com>
